prepos + fix for stuttering shop on mobile devices

--- a/style.css
+++ b/style.css
@@ -27,8 +27,15 @@ a {
 	position: absolute;
 	max-width: 50em;
 	width: 100%;
+	height: 100%;
+	width: 100vw;
 	height: 100vh;
 	display: none;
+	margin: auto;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
 }
 
 iframe {
